<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fr.epita.tictactoe.GameTable">

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline" app:layout_constraintGuide_begin="141dp"/>
    <TextView
            android:text="@string/guestLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:textSize="30sp"
            android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/playerScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/playerLabel" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="1dp" android:layout_marginRight="1dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="30sp"
            android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/labelTurn"
            android:layout_width="wrap_content"
            android:layout_height="23dp" android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textSize="20sp"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp">

        <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:text="">
            </Button>
            <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="">
            </Button>
            <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:layout_height="wrap_content">
            </Button>
        </TableRow>
        <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:text="">
            </Button>
            <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="">
            </Button>
            <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:layout_height="wrap_content">
            </Button>
        </TableRow>
        <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:text="">
            </Button>
            <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="">
            </Button>
            <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:layout_height="wrap_content">
            </Button>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>